--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-y
+<html>
+<head><title>fast circles</title>
+    <link rel = "stylesheet" href="style.css">
+    </head>
+<body>
+<iframe width="100%" height="100%" src="https://www.addictinggames.com/embed/html5-games/24937" scrolling="no"></iframe>
+</body></html>
+
